--- a/m4r/views/projects_table.erb
+++ b/m4r/views/projects_table.erb
@@ -18,3 +18,9 @@
   </div>
 </div>
 <% end %>
+<%  %>
+<% if defined?(@additional_controls) && !@additional_controls.nil? %>
+<style type="text/css" media="screen">
+  #project-info th#th-header-0 { width: 20%}
+</style>
+<% end %>
