--- a/m4r/views/full.erb
+++ b/m4r/views/full.erb
@@ -4,6 +4,7 @@
 <!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--> <html class="no-js" lang="en" dir="ltr"> <!--<![endif]-->
 <head>
+<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title><%= @page_title = (@page_subtitle || "") + 'The World Bank - ' + (@title || "Mapping for Results") %></title>
