--- a/m4r/views/sector_controls.erb
+++ b/m4r/views/sector_controls.erb
@@ -37,11 +37,11 @@
       </div>
       <div id="map-content-regions" style="display:none">
         <ul class="radio-prov">
-          <li onclick="wb.toggleSector('counts_admin1', true); return false">
+          <li class="control" onclick="wb.toggleSector('counts_admin1', true); return false">
             <input type="radio" id="select_province" value="province" name="by_region"/>
             <label>PROVINCE</label>
           </li>
-          <li onclick="wb.toggleSector('counts_admin2', true); return false">
+          <li class="control" onclick="wb.toggleSector('counts_admin2', true); return false">
             <input type="radio" id="select_district" value="district"  name="by_region"/>
             <label>DISTRICT</label>
           </li>
