--- a/assets/css/mapping.css
+++ b/assets/css/mapping.css
@@ -25,7 +25,8 @@ a, a:visited{
 	vertical-align: top;
 }
 a:hover {
-    color: #222222;
+    color: #850000;
+    text-decoration: underline;
 }
 .main{
 	float: left;
