Adding in about drop-down

--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -3,6 +3,7 @@
   	  <% if @page.url =~ /extractives/ %>
   	  <li>
   	   <a href="/extractives/about_extractives" id="about_link" title="About">About</a>
+  	   <a href="/extractives/how_extractives" id="how_link" title="How">How</a>
   	  </li>
   	  <% end %>
   	    <% if %w{country}.include?(@page.page_type) %>
