--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -1,9 +1,12 @@
   <div id="share">
   	<ul class="dropmenu map-options">
   	  <% if @page.url =~ /extractives/ %>
-  	  <li>
-  	   <a href="/extractives/about_extractives" id="about_link" title="About">About</a>
-  	   <a href="/extractives/how_extractives" id="how_link" title="How">How</a>
+  	  <li class="about">
+  	   <span></span><a href="#" id="about_link" title="About">About</a>
+  	   <ul class="dropmenu_options">
+  	     <li><a href="/extractives/about_extractives" id="" title="About">About Extractives</a></li>
+  	     <li><a href="/extractives/how_extractives" id="" title="How">How To</a></li>
+  	   </ul>
   	  </li>
   	  <% end %>
   	    <% if %w{country}.include?(@page.page_type) %>
