--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -4,8 +4,8 @@
   	  <li class="about">
   	   <span></span><a href="#" id="about_link" title="About">About</a>
   	   <ul class="dropmenu_options">
-  	     <li><a href="/extractives/about_extractives" id="" title="About">About Extractives</a></li>
-  	     <li><a href="/extractives/how_extractives" id="" title="How">How To</a></li>
+  	     <li><a href="/extractives/about_extractives" id="" title="About">About the data</a></li>
+  	     <li><a href="/extractives/how_extractives" id="" title="How">How-to guide</a></li>
   	   </ul>
   	  </li>
   	  <% end %>
