--- a/m4r/views/infowindow.erb
+++ b/m4r/views/infowindow.erb
@@ -1,6 +1,6 @@
   <div id="map_factbox"><h3 class="factbox-title"><%= @page[:name].capitalize %></h3>
     <p class="map-factbox-info"><b>Region:</b>Kignoma</p>
     <p class="map-factbox-info"><b>Total Projects:</b>56</p>
-    <p class="map-factbox-info"><b>Total Funding:</b>12 Million</p>
+    <p class="map-factbox-info"><b>Total Funding:</b>12 million</p>
     <p class="map-factbox-info"><b>Results:</b>38 New Schools</p>
   </div>
