--- a/m4r/views/overview.erb
+++ b/m4r/views/overview.erb
@@ -1,5 +1,5 @@
       <div id="banner">
-        <div id="local" class="clearfix collapsible-header ">
+        <div id="local" class="clearfix <%= 'collapsible-header' if !@page.nil? && @page.name == 'World' %>">
           <div title="Click to hide the overview information" class="site-name"><a class="active" href="/"><%= @title || "Mapping for Results" %></a></div>
           <div class="collapsible-header <%= (@page.nil? || %w{world haiti boost}.include?(@page.shortname)) ? 'expanded': 'collapsed'%>" content_id="collapsible-banner" >
             <div title="More information about Mapping for Results" class="banner-open-image"></div>
